--- a/src/templates/partials/master-top.njk
+++ b/src/templates/partials/master-top.njk
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Gulpazan</title>
+    <title>Bermejo Portfolio</title>
 
     <link rel="stylesheet" href="assets/css/main.css">
 
